--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
 
-  app:
+  app_admin:
     container_name: app
     build:
       context: ./docker
@@ -31,6 +31,6 @@ services:
     ports:
       - 90:80
     depends_on:
-      - app
+      - app_admin
     networks:
       - evisa
