add evisa admin

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,7 +6,7 @@ networks:
 services:
 
   app_admin:
-    container_name: app
+    container_name: app_admin
     build:
       context: ./docker
     environment:
