add evisa admin

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -19,8 +19,8 @@ services:
     networks:
       - evisa
 
-  nginx:
-    container_name: nginx
+  nginx_admin:
+    container_name: nginx_admin
     build:
       context: ./docker/nginx
     volumes:
