--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,7 +11,7 @@ services:
       context: ./docker
     environment:
       - APP_ENV=prod
-      - DATABASE_URL=postgresql://root:QT6e5APtSYaU@db:localhost:5432/evisa_db?serverVersion=14
+      - DATABASE_URL=postgresql://root:QT6e5APtSYaU@nte.test.xo-dmp.com:5432/evisa_db?serverVersion=14
       - REMOTE_HOST=host.docker.internal
       - "host.docker.internal:host-gateway"
     volumes:
