--- a/app/.env
+++ b/app/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=6493f965a5367194cc09de3ccd6b269a
 ###< symfony/framework-bundle ###
 ###> symfony/messenger ###
