--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - APP_ENV=dev
       - MAILER_DSN=smtp://mailhog:1025
       - XDEBUG_MODES=debug
-      - DATABASE_URL=postgresql://root:QT6e5APtSYaU@db:5432/evisa_db?serverVersion=14
+      - DATABASE_URL=postgresql://root:QT6e5APtSYaU@nte.test.xo-dmp.com:5432/evisa_db?serverVersion=14
       - REMOTE_HOST=host.docker.internal
       - "host.docker.internal:host-gateway"
     volumes:
@@ -62,8 +62,8 @@ services:
     networks:
       - evisa
 
-  nginx:
-    container_name: nginx
+  admin_nginx:
+    container_name: admin_nginx
     build:
       context: ./docker/nginx
     volumes:
@@ -74,6 +74,6 @@ services:
     ports:
       - 83:80
     depends_on:
-      - app
+      - app_admin
     networks:
       - evisa
